# src/controllers/fonds_controller.js
@@ -1,3 +1,4 @@
+const { error } = require('winston');
 const response = require('../middlewares/response');
 const Fonds = require('../models/Fonds');
 const Utils = require('../utils/utils.methods');
@@ -72,17 +73,18 @@ const getVlFonds = async (req, res, next) => {
 
     console.log(fonds_url);
     await fetch(fonds_url).then(async res => res.json()).then(async data => {
-        if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des fonds !`)
+        if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des fonds !`, data.title)
         const fonds = data.payLoad;
 
+        console.log(`Chargement des valeurs liquidatives`)
         console.log(vls_url);
         await fetch(vls_url).then(res => res.json()).then(data => {
-            if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des valeurs liquidatives !`)
+            if (data.status!=200) return response(res, 403, `Une erreur lors de la récupération des valeurs liquidatives !`, data.title)
             
-            console.log(`Calcul des valeurs liquidatives de fonds..`)
+            console.log(`Calcul des valeurs liquidatives de fonds`)
             const vls = data.payLoad;
-            let result = [];
-            let i = 0;
+            let result = []; let i = 0;
+            
             for (let f of fonds) {
                 
                 let analytics = {};
@@ -106,7 +108,48 @@ const getVlFonds = async (req, res, next) => {
             }
 
             return response(res, 200, `Chargement des fonds terminé`, fonds, result)
-        })
+        }).catch(error => next(error))
+    }).catch(error => next(error))
+}
+
+const calculateOperationCost = async (req, res, next) => {
+
+
+
+}
+
+const runSimulator = async (req, res, next) => {
+
+    const {versement_initial, versement_periodique, horizon, rendement_attendu} = req.body;
+
+    const horizon_mois = Number(horizon) * 12;
+    const taux = Number(rendement_attendu)/100;
+
+    
+    const versement_total = Number(versement_periodique) * horizon_mois;
+    const revenu_net = (Number(versement_initial) + Number(versement_periodique)) * Number(taux);
+    const revenu_moyen_mensuel = 0;
+    const valeur_final_placement = Number(versement_initial) + Number(versement_total) + Number(revenu_net);
+    
+    console.log("Versement initial", versement_initial);
+    console.log("horizon", horizon, "an(s)")
+    console.log("Horizon mois", horizon_mois);
+    console.log("Taux", taux);
+
+    console.log("Versement total", versement_total)
+    console.log("Revenu net", revenu_net);
+    console.log("Revenu moyen mensuel", revenu_moyen_mensuel);
+    console.log("Valeur final placement", valeur_final_placement);
+
+    return response(res, 200, `Calcul simulateur terminé`, {
+        versement_initial,
+        horizon,
+        horizon_mois,
+        taux,
+        versement_total,
+        revenu_net,
+        revenu_moyen_mensuel,
+        valeur_final_placement
     })
 }
 
@@ -114,4 +157,6 @@ module.exports = {
     getAllFonds,
     getAllValeurLiquidatives,
     getVlFonds,
-}
+    calculateOperationCost,
+    runSimulator
+} 
