# src/routes/fonds_routes.js
@@ -9,6 +9,9 @@ const fileController = require('../controllers/file_constroller');
 router.get('/', app_auth, session_verify, atsgo_auth, fondsController.getVlFonds);
 router.get('/valeur_liquidatives', app_auth, session_verify, atsgo_auth, fondsController.getAllValeurLiquidatives);
 
+router.post('/operation/calcul', app_auth, session_verify, atsgo_auth, fondsController.calculateOperationCost);
+router.post('/simulateur', app_auth, session_verify, atsgo_auth, fondsController.runSimulator);
+
 router.get('/fichiers', app_auth, session_verify, fileController.getAllFiles);
 router.get('/fichiers/:ref', app_auth, session_verify, fileController.getOneFile);
 
